force-app/main/default/objects/Campaign/fields/Action_Required_Prototype__c.field-meta.xml
<CustomField>
    <fullName>Action_Required_Prototype__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Required (Prototype)</label>
    <type>Checkbox</type>
</CustomField>