force-app/main/default/objects/Campaign/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <label>Activation</label>
    <type>TextArea</type>
</CustomField>