force-app/main/default/objects/Campaign/fields/Agency_Relations_JIRA_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Agency_Relations_JIRA_Ticket__c</fullName>
    <label>Strategic Marketing JIRA Ticket</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>