force-app/main/default/objects/Campaign/fields/Approved_by_Management__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Management__c</fullName>
    <label>Approved by Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>