force-app/main/default/objects/Campaign/fields/Audience_Persona__c.field-meta.xml
<CustomField>
    <fullName>Audience_Persona__c</fullName>
    <label>Audience Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Millennials</fullName>
            </value>
            <value>
                <fullName>Young Millennials</fullName>
            </value>
            <value>
                <fullName>Moms</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>