force-app/main/default/objects/Campaign/fields/Campaign_Length__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Length__c</fullName>
    <description>The length (in days) of a campaign from start to end</description>
    <formula>EndDate -  StartDate</formula>
    <inlineHelpText>The length (in days) of a campaign from start to end</inlineHelpText>
    <label>Campaign Length (# of Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>