force-app/main/default/objects/Campaign/fields/Closed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Closed_Revenue__c</fullName>
    <label>Closed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>