force-app/main/default/objects/Campaign/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>Collateral</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>