force-app/main/default/objects/Campaign/fields/Collateral_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Expenses__c</fullName>
    <label>Collateral Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>