force-app/main/default/objects/Campaign/fields/Cost_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Cost_Breakdown__c</fullName>
    <label>Cost Breakdown</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>