force-app/main/default/objects/Campaign/fields/Cost_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Lead__c</fullName>
    <formula>Expense_Sum__c  /  NumberOfResponses</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expense sum divided by responses equals to cost per raw lead</inlineHelpText>
    <label>Cost Per Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>