force-app/main/default/objects/Campaign/fields/Cost_Per_MQL__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_MQL__c</fullName>
    <formula>Expense_Sum__c / of_MQLs__c</formula>
    <label>Cost Per MQL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>