force-app/main/default/objects/Campaign/fields/Creative_comments__c.field-meta.xml
<CustomField>
    <fullName>Creative_comments__c</fullName>
    <description>This field should be filled by Creative manager.</description>
    <inlineHelpText>This field should be filled by Creative manager.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>