force-app/main/default/objects/Campaign/fields/Creative_JIRA_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Creative_JIRA_Ticket__c</fullName>
    <label>Demo Link 1</label>
    <type>Url</type>
</CustomField>