force-app/main/default/objects/Campaign/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Design: Custom Prototype</fullName>
            </value>
            <value>
                <fullName>Design Team: Internal Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>