force-app/main/default/objects/Campaign/fields/Custom_Creative__c.field-meta.xml
<CustomField>
    <fullName>Custom_Creative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Creative</label>
    <type>Checkbox</type>
</CustomField>