force-app/main/default/objects/Campaign/fields/Demo_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Link_2__c</fullName>
    <label>Demo Link 2</label>
    <type>Url</type>
</CustomField>