force-app/main/default/objects/Campaign/fields/Demo_Link_3__c.field-meta.xml
<CustomField>
    <fullName>Demo_Link_3__c</fullName>
    <label>Demo Link 3</label>
    <type>Url</type>
</CustomField>