force-app/main/default/objects/Campaign/fields/Event_Registration_Method__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Method__c</fullName>
    <label>Event Registration Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Splash Page</fullName>
            </value>
            <value>
                <fullName>Email Invitation</fullName>
            </value>
            <value>
                <fullName>Ceros Interactive Page</fullName>
            </value>
            <value>
                <fullName>Sponsored</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>