force-app/main/default/objects/Campaign/fields/Event_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Event_Requested_By__c</fullName>
    <label>Event Requested By:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>