force-app/main/default/objects/Campaign/fields/Existing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Existing_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Unit</label>
    <type>Checkbox</type>
</CustomField>