force-app/main/default/objects/Campaign/fields/Expense_Sum__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sum__c</fullName>
    <label>Expense Sum</label>
    <summarizedField>Expenses__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Expenses__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>