force-app/main/default/objects/Campaign/fields/GumGum_Attendees__c.field-meta.xml
<CustomField>
    <fullName>GumGum_Attendees__c</fullName>
    <label>GumGum Attendees</label>
    <type>TextArea</type>
</CustomField>