force-app/main/default/objects/Campaign/fields/Key_Takeaway__c.field-meta.xml
<CustomField>
    <fullName>Key_Takeaway__c</fullName>
    <description>Fill this out after all tracking has been completed.</description>
    <label>Key Takeaway</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>