force-app/main/default/objects/Campaign/fields/Lead_Time_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_3__c</fullName>
    <description>This field should be filled by Creative manager.</description>
    <inlineHelpText>This field should be filled by Creative manager.</inlineHelpText>
    <label>Lead Time 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>