force-app/main/default/objects/Campaign/fields/Minimum_Spend_2__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend_2__c</fullName>
    <description>This field should be filled by Creative manager.</description>
    <inlineHelpText>This field should be filled by Creative manager.</inlineHelpText>
    <label>Minimum Spend 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>