force-app/main/default/objects/Campaign/fields/Next_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Next_Quarter__c</fullName>
    <formula>AND(
   CEILING( MONTH( StartDate ) / 3 ) = CEILING( MONTH( TODAY() ) / 3 )+1,
   YEAR( StartDate ) = YEAR( TODAY() )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Quarter</label>
    <type>Checkbox</type>
</CustomField>