force-app/main/default/objects/Campaign/fields/Number_of_MQLs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_MQLs__c</fullName>
    <label>Number of MQLs</label>
    <summarizedField>CampaignMember.MQL_Value2__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>