force-app/main/default/objects/Campaign/fields/of_MQLs__c.field-meta.xml
<CustomField>
    <fullName>of_MQLs__c</fullName>
    <label># of MQLs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>