force-app/main/default/objects/Campaign/fields/Open_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Open_Revenue__c</fullName>
    <label>Open Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>