force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
                <label>APAC - Japan</label>
            </value>
            <value>
                <fullName>APAC - New Zealand</fullName>
            </value>
            <value>
                <fullName>APAC - NSW</fullName>
            </value>
            <value>
                <fullName>APAC - QLD</fullName>
            </value>
            <value>
                <fullName>APAC - SA</fullName>
            </value>
            <value>
                <fullName>APAC - SEA</fullName>
            </value>
            <value>
                <fullName>APAC - VIC</fullName>
            </value>
            <value>
                <fullName>APAC - WA</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>EMEA - Belgium</fullName>
            </value>
            <value>
                <fullName>EMEA - Germany</fullName>
            </value>
            <value>
                <fullName>EMEA - Netherlands</fullName>
            </value>
            <value>
                <fullName>EMEA - Nordics</fullName>
            </value>
            <value>
                <fullName>EMEA - UK</fullName>
            </value>
            <value>
                <fullName>Corporate Marketing</fullName>
                <label>Global</label>
            </value>
            <value>
                <fullName>NA - Canada</fullName>
            </value>
            <value>
                <fullName>NA Sales East</fullName>
                <label>NA - East</label>
            </value>
            <value>
                <fullName>NA Sales Central &amp; Canada</fullName>
                <label>NA - Midwest</label>
            </value>
            <value>
                <fullName>NA Sales West</fullName>
                <label>NA - West</label>
            </value>
            <value>
                <fullName>Central Marketing</fullName>
                <label>North America</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <isActive>false</isActive>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Australia &amp; NZ</fullName>
                <isActive>false</isActive>
                <label>Australia &amp; NZ</label>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Dental</fullName>
                <isActive>false</isActive>
                <label>Dental</label>
            </value>
            <value>
                <fullName>Execs</fullName>
                <isActive>false</isActive>
                <label>Execs</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <isActive>false</isActive>
                <label>HR</label>
            </value>
            <value>
                <fullName>International (Besides Europe, Australia &amp; NZ)</fullName>
                <isActive>false</isActive>
                <label>International (Besides Europe, Australia &amp; NZ)</label>
            </value>
            <value>
                <fullName>Intl Sports</fullName>
                <isActive>false</isActive>
                <label>Intl Sports</label>
            </value>
            <value>
                <fullName>NA Programmatic</fullName>
                <isActive>false</isActive>
                <label>NA Programmatic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>