force-app/main/default/objects/Campaign/fields/Relevant_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Business_Line__c</fullName>
    <label>Relevant Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GumGum Media</fullName>
            </value>
            <value>
                <fullName>In-Game</fullName>
            </value>
            <value>
                <fullName>In-Video</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Open Market</fullName>
            </value>
            <value>
                <fullName>Publisher Development</fullName>
            </value>
            <value>
                <fullName>PXYZ AIP</fullName>
            </value>
            <value>
                <fullName>PXYZ Media</fullName>
            </value>
            <value>
                <fullName>Verity for Publishers</fullName>
            </value>
            <value>
                <fullName>Verity PMP</fullName>
            </value>
            <value>
                <fullName>Verity Pre-bid</fullName>
            </value>
            <value>
                <fullName>Verity Video PMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>