force-app/main/default/objects/Campaign/fields/Required_Time__c.field-meta.xml
<CustomField>
    <fullName>Required_Time__c</fullName>
    <description>This field should be filled by Creative manager.</description>
    <inlineHelpText>This field should be filled by Creative manager.</inlineHelpText>
    <label>Lead Time 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>