force-app/main/default/objects/Campaign/fields/RFP_count__c.field-meta.xml
<CustomField>
    <fullName>RFP_count__c</fullName>
    <label>RFP count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>