force-app/main/default/objects/Campaign/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <formula>BudgetedCost / AmountAllOpportunities  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>