force-app/main/default/objects/Campaign/fields/Speaker_s__c.field-meta.xml
<CustomField>
    <fullName>Speaker_s__c</fullName>
    <label>Speaker(s)</label>
    <type>TextArea</type>
</CustomField>