force-app/main/default/objects/Campaign/fields/Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_2__c</fullName>
    <formula>StartDate</formula>
    <label>Start Date (2)</label>
    <type>Date</type>
</CustomField>