force-app/main/default/objects/Campaign/fields/Target_Region_s__c.field-meta.xml
<CustomField>
    <fullName>Target_Region_s__c</fullName>
    <label>Target Region(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>