force-app/main/default/objects/Campaign/fields/Total_Price_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_for_Approval__c</fullName>
    <label>Total Price for Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>