force-app/main/default/objects/Campaign/fields/Unit_In_Image__c.field-meta.xml
<CustomField>
    <fullName>Unit_In_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit: In-Image</label>
    <type>Checkbox</type>
</CustomField>