force-app/main/default/objects/Campaign/fields/Unit_Video__c.field-meta.xml
<CustomField>
    <fullName>Unit_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit: Video</label>
    <type>Checkbox</type>
</CustomField>