force-app/main/default/objects/Campaign/recordTypes/Agency_Relations_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Agency_Relations_Campaign</fullName>
    <active>false</active>
    <description>Retired 11_29_2022 per Val; will remove on 12/5/2022</description>
    <label>Strategic Marketing Campaign</label>
</RecordType>