force-app/main/default/objects/Campaign/recordTypes/Campaign.recordType-meta.xml
<RecordType>
    <fullName>Campaign</fullName>
    <active>true</active>
    <label>Campaign</label>
</RecordType>