force-app/main/default/objects/Campaign/recordTypes/Event_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Event_Campaign</fullName>
    <active>true</active>
    <label>Event Campaign</label>
</RecordType>