force-app/main/default/objects/Campaign/listViews/Agency_Relations_Campaigns.listView-meta.xml
<ListView>
    <fullName>Agency_Relations_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Agency_Relations_Campaign</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NUM_OPPORTUNITIES</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Agency Relations Campaigns</label>
</ListView>