force-app/main/default/objects/Campaign/listViews/Copy_of_2024_Campaigns_with_no_Opps.listView-meta.xml
<ListView>
    <fullName>Copy_of_2024_Campaigns_with_no_Opps</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Location__c</columns>
    <columns>Region__c</columns>
    <columns>Relevant_Business_Line__c</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>Expense_Sum__c</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Sales Campaign</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NUM_OPPORTUNITIES</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Hosted Event,Sponsored Tradeshow</value>
    </filters>
    <label>2025 Campaigns with no Opps</label>
</ListView>