force-app/main/default/objects/Campaign/listViews/EAST_Event_Campaigns.listView-meta.xml
<ListView>
    <fullName>EAST_Event_Campaigns</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Location__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Internal Event,Sales T&amp;E Event,National Event,Regional Event,Strategic Event</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>NA Sales East</value>
    </filters>
    <label>EAST Event Campaigns</label>
</ListView>